Дополнения в документации(AsciiDoc) Некоторые PATCH методы стали PUT Обновлена работа с ролями пользователей Обновлён Spring Security Config Добавлен Spring Config Интеграционные тесты стали более Spring'овые чем Mock Появление глобального обработчика исключений Logback + SLF4J Настройки логгов для тестов и обычного запуска Начало более разнообразного использования кодов-ответов(допустим 403, 401), использование @PreAuthorize Переход с 17 Java на Java 21 Переход с 8.2 Gradle на 8.8 Исправление недоступности страницы с администраторами для неавторизованных пользователей Запуск проекта в VS Code
Переписанные классы:
DBService
TestController
NewsController
ContactsController
HTeachersController
DnevnikController

MainServiceTest